Add some interfaces and classes